--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             console.log(username)
             setInterval(() => {
                 const xhr1 = new XMLHttpRequest()
-                xhr1.open('GET', 'https://messserver-thomaskkrut.b4a.run/message/' + "__everyone__")
+                xhr1.open('GET', 'https://messserver-thomaskkrut.b4a.run/message/' + username)
                 xhr1.send()
 
                 const xhr2 = new XMLHttpRequest()
