--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <form>
         <input type="text" id="sender" name="sender" placeholder="Username">
         <br>
-        
-    
+        <button onclick="join()">Join</button>
+    </form>
+
+    <form>
+
         <textarea name="message" id="message" rows="10" cols="30" placeholder="Message"></textarea>
-<br>
+        <br>
         <button onclick="send()">Send</button>
     </form>
 
@@ -25,6 +28,12 @@
     <div id="messages"></div>
 
     <script>
+
+        function join() {
+            event.preventDefault()
+            const sender = document.getElementById('sender').value
+            initGetMessages(sender)
+        }
 
         function send() {
             event.preventDefault()
@@ -41,7 +50,6 @@
             xhr.open('POST', 'https://messserver-thomaskkrut.b4a.run/message')
             xhr.setRequestHeader('Content-Type', 'application/json')
             xhr.send(JSON.stringify(data))
-            initGetMessages(sender)
         }
 
         function initGetMessages(username) {
