--- a/index.html
+++ b/index.html
@@ -27,82 +27,11 @@
 
     <div id="messages"></div>
 
-    <script>
+    <script src="script.js"></script>
 
-        function join() {
-            event.preventDefault()
-            const sender = document.getElementById('sender').value
-            initGetMessages(sender)
-        }
+        
 
-        function send() {
-            event.preventDefault()
-            const sender = document.getElementById('sender').value
-            const message = document.getElementById('message').value
-            const receiver = "__everyone__"
-            const data = {
-                sender,
-                receiver,
-                message,
-            }
-            document.getElementById('message').value = ''
-            const xhr = new XMLHttpRequest()
-            xhr.open('POST', 'https://messserver-thomaskkrut.b4a.run/message')
-            xhr.setRequestHeader('Content-Type', 'application/json')
-            xhr.send(JSON.stringify(data))
-        }
-
-        function initGetMessages(username) {
-            console.log(username)
-            setInterval(() => {
-                const xhr1 = new XMLHttpRequest()
-                xhr1.open('GET', 'https://messserver-thomaskkrut.b4a.run/message/' + username)
-                xhr1.send()
-
-                const xhr2 = new XMLHttpRequest()
-                xhr2.open('GET', 'https://messserver-thomaskkrut.b4a.run/activeusers/' + username)
-                xhr2.send()
-
-                xhr2.onload = () => {
-                    const activeusers = JSON.parse(xhr2.response)
-                    console.log(activeusers)
-                    if (activeusers.length > 0) {
-                        const activeusersDiv = document.getElementById('activeusers')
-                        activeusersDiv.innerHTML = ''
-                        activeusers.forEach(activeuser => {
-                            const activeuserDiv = document.createElement('div')
-                            activeuserDiv.innerHTML = `
-
-                                <p>${activeuser}</p>
-                            `
-                            activeusersDiv.appendChild(activeuserDiv)
-                        })
-                    }
-                }
-
-
-                xhr1.onload = () => {
-                    const messages = JSON.parse(xhr1.response)
-                    console.log(messages)
-                    if (messages.length > 0) {
-                        const messagesDiv = document.getElementById('messages')
-                        messagesDiv.innerHTML = ''
-                        messages.forEach(message => {
-                            const messageDiv = document.createElement('div')
-                            messageDiv.innerHTML = `
-                                <h3>${message.sender}</h3>
-                                <p>${message.message}</p>
-                            `
-                            messagesDiv.appendChild(messageDiv)
-                        })
-                    }
-                }
-            }, 3000)
-        }
-
-
-
-    </script>
+   
 
 </body>
 
